# tachimawari

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-and-test.yml  build-debian-nightly.yml  build-debian-stable.yml  ci.yml  ros2-ci.yml
data/: miru.json
include/motion/: serial.hpp
include/tachimawari/: joint.hpp  motion_manager.hpp
include/tachimawari/control/: control.hpp
include/tachimawari/control/controller/: cm740.hpp  controller.hpp
include/tachimawari/control/controller/module/: cm740.hpp  cm740_address.hpp
include/tachimawari/control/controller/packet/protocol_1/: protocol_1.hpp
include/tachimawari/control/controller/platform/: linux.hpp
include/tachimawari/control/controller/utils/: timer.hpp
include/tachimawari/control/manager/: control_manager.hpp
include/tachimawari/control/node/: control_node.hpp
include/tachimawari/control/packet/model/: packet.hpp  packet_id.hpp
include/tachimawari/control/packet/protocol_1/: p1_packet.hpp  protocol_1.hpp
include/tachimawari/control/packet/protocol_1/instruction/: bulk_read_packet.hpp  insctruction.hpp  instruction.hpp  read_packet.hpp  sync_write_packet.hpp  write_packet.hpp
include/tachimawari/control/packet/protocol_1/model/: packet.hpp  packet_id.hpp  packet_index.hpp
include/tachimawari/control/packet/protocol_1/status/: bulk_read_data.hpp  status_packet.hpp
include/tachimawari/control/packet/protocol_1/utils/: byte.hpp  word.hpp
include/tachimawari/control/sdk/: sdk.hpp
include/tachimawari/control/sdk/module/: dynamixel_sdk.hpp  marin_core_address.hpp
include/tachimawari/control/sdk/packet/model/: group_bulk_read.hpp
include/tachimawari/control/sdk/packet/protocol_1/: group_bulk_read.hpp  group_sync_write.hpp
include/tachimawari/control/sdk/packet/protocol_2/: group_bulk_read.hpp  group_sync_write.hpp
include/tachimawari/control/sdk/utils/packet/: group_bulk_read.hpp
include/tachimawari/control/sdk/utils/protocol_1/: group_bulk_read.hpp  group_sync_write.hpp
include/tachimawari/control/sdk/utils/protocol_2/: group_bulk_read.hpp  group_sync_write.hpp
include/tachimawari/imu/: imu.hpp
include/tachimawari/imu/node/: imu_node.hpp  imu_provider.hpp
include/tachimawari/joint/: joint.hpp  joint_id.hpp
include/tachimawari/joint/model/: joint.hpp  joint_id.hpp
include/tachimawari/joint/node/: joint_manager.hpp  joint_node.hpp
include/tachimawari/joint/protocol_1/: mx28_address.hpp
include/tachimawari/joint/protocol_2/: mx28_address.hpp
include/tachimawari/joint/tf2/: frame.hpp  frame_id.hpp  tf2_manager.hpp
include/tachimawari/joint/utils/: middleware.hpp  node_control.hpp  utils.hpp
include/tachimawari/node/: rviz_client_node.hpp  rviz_server_node.hpp  tachimawari_node.hpp
launch/: rviz_client_launch.py  tachimawari_launch.launch.py  tachimawari_launch.py
log/: latest_test
motion_opencr/: CMakeLists.txt  package.xml
motion_opencr/include/motion/: joint.hpp
motion_opencr/include/motion_opencr/: joint.hpp  motion.hpp  motion_manager.hpp  pose.hpp
motion_opencr/src/: check_joints_main.cpp  drive_joint_main.cpp  move_joint_main.cpp
motion_opencr/src/motion/: joint.cpp
motion_opencr/src/motion_opencr/: joint.cpp  motion.cpp  motion_manager.cpp  pose.cpp
motion_opencr_interfaces/: CMakeLists.txt  package.xml
motion_opencr_interfaces/msg/: Joint.msg
motion_opencr_interfaces/srv/: JointMessage.srv  JointsMessage.srv
rviz/: rviz.rviz
src/: backlash_tuner_main.cpp  broadcast_ping_main.cpp  check_joints_main.cpp  check_joints_torque.cpp  dynamixel_main.cpp  init_joints_main.cpp  move_joint_main.cpp  read_buttons_main.cpp  read_joints_main.cpp  rviz_client_main.cpp  rviz_server_main.cpp  serial_main.cpp  tachimawari_main.cpp
src/launch/: rviz_client_launch.py
src/motion/: serial.cpp
src/tachimawari/: joint.cpp  motion_manager.cpp
src/tachimawari/control/controller/: cm740.cpp
src/tachimawari/control/controller/module/: cm740.cpp
src/tachimawari/control/controller/packet/protocol_1/model/: packet.cpp
src/tachimawari/control/controller/platform/: linux.cpp
src/tachimawari/control/controller/utils/: timer.cpp
src/tachimawari/control/manager/: control_manager.cpp
src/tachimawari/control/node/: control_node.cpp
src/tachimawari/control/packet/protocol_1/instruction/: bulk_read_packet.cpp  read_packet.cpp  sync_write_packet.cpp  write_packet.cpp
src/tachimawari/control/packet/protocol_1/model/: packet.cpp
src/tachimawari/control/packet/protocol_1/status/: bulk_read_data.cpp  status_packet.cpp
src/tachimawari/control/packet/protocol_1/utils/: byte.cpp  word.cpp
src/tachimawari/control/sdk/module/: dynamixel_sdk.cpp
src/tachimawari/control/sdk/packet/model/: group_bulk_read.cpp
src/tachimawari/control/sdk/packet/protocol_1/: group_bulk_read.cpp  group_sync_write.cpp
src/tachimawari/control/sdk/packet/protocol_2/: group_bulk_read.cpp  group_sync_write.cpp
src/tachimawari/control/sdk/utils/packet/: group_bulk_read.cpp
src/tachimawari/control/sdk/utils/protocol_1/: group_bulk_read.cpp  group_sync_write.cpp
src/tachimawari/data/: miru.json
src/tachimawari/imu/node/: imu_node.cpp  imu_provider.cpp
src/tachimawari/joint/: joint.cpp
src/tachimawari/joint/model/: joint.cpp  joint_id.cpp
src/tachimawari/joint/node/: joint_manager.cpp  joint_node.cpp
src/tachimawari/joint/tf2/: frame.cpp  frame_id.cpp  tf2_manager.cpp
src/tachimawari/joint/utils/: middleware.cpp  node_control.cpp  utils.cpp
src/tachimawari/node/: rviz_client_node.cpp  rviz_server_node.cpp  tachimawari_node.cpp
tachimawari/: CMakeLists.txt  package.xml
tachimawari/include/tachimawari/: joint.hpp  motion_manager.hpp
tachimawari/src/: check_joints_main.cpp  motion_manager_main.cpp  move_joint_main.cpp
tachimawari/src/tachimawari/: joint.cpp  motion_manager.cpp
tachimawari_interfaces/: CMakeLists.txt  package.xml
tachimawari_interfaces/srv/: SetJoints.srv
test/comparison/: almost_equal.hpp  joint.hpp
test/joint/: joint.hpp  joint_test.cpp
urdf/: robot.urdf
(+17 files in other folders)
